@@ -2,6 +2,10 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? ????, PHP 8.1.21
 
+- CLI:
+  . Fixed bug GH-11246 (cli/get_set_process_title fails on MacOS).
+    (James Lucas)
+
 - Core:
   . Fixed build for the riscv64 architecture/GCC 12. (Daniil Gentili)
 
